# god-damn-debugger

./: .gitignore  CMakeLists.txt  docker_run.sh  hello.c  main.c
includes/: breakpoint.h  gdd.h  gdd_utils.h
plan/: plan.xml
scripts/: build.sh  build_tests.sh  change_dir.sh  docker_run.sh  install_libs.sh  run.sh  setup_env.sh
src/: CMakeLists.txt  breakpoint.c  debug.c  debug_info.c  main.c  ptrace_utils.c  utils.c
test/: adder.c  dwarf_test.c  target.c  test.c
